Won’t do real branching, but nice Combination of Brute Force and global/local/subgraph- scoring.